--- a/frontend/src/styles/register.css
+++ b/frontend/src/styles/register.css
@@ -1,5 +1,5 @@
-register-form{
-    margin: 30px 10px 0px 10px;
+.register-form{
+    margin: 30px;
     padding: 30px;
     border-radius: 15px;
     background-color: lightblue;
