--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -1,14 +1,34 @@
 
-#navbar {
+.navbar {
+    padding-bottom: 0px;
     background-color: rgb(0,70,190);
 }
 
 #logo{
     margin-left: 10px;
+    margin-bottom: 15px;
+    font-size: 24px;
+    text-decoration: none;
 }
 
 #root{
     background-color: rgb(229,233,237);
     padding-bottom: 500px;
+}
+
+.link-item{
+    color: white;
+    margin: 5px 5px 0px 5px;
+    padding-top: 5px;
+    text-decoration: none;
+}
+
+.link-item:hover {
+    color: grey;
+}
+
+.nav-item{
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 
