If user is logged in, "welcome, {firstName}!" is displayed at the top of the homepage

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -76,6 +76,12 @@
     padding-bottom: 500px;
 }
 
+#welcome-message{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+}
+
 
 
 
