--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -45,6 +45,10 @@
     color: grey;
 }
 
+.logo{
+    height:50px;
+    width: 90px;
+}
 .navbar {
     padding-bottom: 0px;
     background-color: rgb(0,70,190);
@@ -53,13 +57,6 @@
 .nav-item{
     margin-bottom: 0px;
     padding-bottom: 0px;
-}
-
-#logo{
-    margin-left: 10px;
-    margin-bottom: 15px;
-    font-size: 24px;
-    text-decoration: none;
 }
 
 #navbar-logout{
