--- a/frontend/src/components/ProductsView/Product.css
+++ b/frontend/src/components/ProductsView/Product.css
@@ -9,8 +9,8 @@
 
 .product-img {
     margin: auto;
-    width: 12.75em;
-    height: 12.75em;
+    width: 12.75rem;
+    height: 12.75rem;
 }
 
 #cont-shopping-btn{
