--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -6,11 +6,10 @@
 
 
 .carousel-item img  {
-    width: 200px;
-    height: 100px;
-    /*min-height: 200px;*/
-    /*min-width: 100px;*/
-    /*background-color: black;*/
+
+    min-height: 400px;
+    min-width: 200px;
+    background-color: black;
 
 
 }
@@ -28,7 +27,8 @@
 }
 
 .carousel-item img {
-
+    width: 200px;
+    height: 300px;
 
 }
 
